<resources>
    <string name="app_name">My Yelp</string>
    <string name="SignInButton">Sign In</string>
    <string name="SignUpButton">Sign Up</string>
    <string name="Header">My Yelp App</string>
    <string name="SearchField">Search</string>
    <string name="LocationField">Location</string>
    <string name="SubmitButton">Submit</string>
    <string name="HomeIcon">Home</string>
    <string name="MapIcon">Map</string>
    <string name="ListIcon">List</string>
    <string name="MoreIcon">More</string>
    <string name="MapHeader">Nearby Locations</string>
    <string name="ListHeader">Locations List</string>
    <string name="DetailHeader">Detailed Info</string>
    <string name="FavoritesHeader">Favorites</string>
    <string name="Open">Open</string>
    <string name="Close">Close</string>
    <string name="WebsiteButton">Visit Website</string>
    <string name="AddFavoriteButton">Add to Favorites</string>
    <string name="DeleteButton">Delete</string>
</resources>