<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/home"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:title="@string/HomeIcon"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/map"
        android:enabled="true"
        android:icon="@drawable/ic_map_marker"
        android:title="@string/MapIcon"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/list_view"
        android:enabled="true"
        android:icon="@drawable/ic_list"
        android:title="@string/ListIcon"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/more"
        android:enabled="true"
        android:icon="@drawable/ic_more"
        android:title="@string/MoreIcon"
        app:showAsAction="ifRoom" />
</menu>