<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchActivity">

    <EditText
        android:id="@+id/SearchTextField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="53dp"
        android:layout_marginEnd="89dp"
        android:layout_marginRight="89dp"
        android:ems="10"
        android:hint="@string/SearchField"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/LocationTextField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/SearchTextField"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="88dp"
        android:layout_marginRight="88dp"
        android:ems="10"
        android:hint="@string/LocationField"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/SubmitButton"
        android:layout_width="210dp"
        android:layout_height="38dp"
        android:layout_below="@+id/LocationTextField"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="87dp"
        android:layout_marginRight="87dp"
        android:text="@string/SubmitButton" />
</RelativeLayout>